--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start":"node index.js",
-    "test": "jest --watchAll --verbose --coverage"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
